[gd_scene load_steps=7 format=3 uid="uid://bgwduib0f5h5d"]

[ext_resource type="Script" path="res://场景/小组件/留言板/textboard.gd" id="1_djuyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5mok"]
size = Vector2(78, 156)

[sub_resource type="Animation" id="Animation_c48ka"]
resource_name = "open"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-20, -50), Vector2(-200, -225)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("textLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("textLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6g0sv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-201, -125)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("textLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("textLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_udg62"]
resource_name = "close"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(-200, -225), Vector2(-20, -50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("textLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("textLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a5t55"]
_data = {
"RESET": SubResource("Animation_6g0sv"),
"close": SubResource("Animation_udg62"),
"open": SubResource("Animation_c48ka")
}

[node name="textboard" type="Area2D"]
script = ExtResource("1_djuyp")

[node name="body" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="body"]

[node name="ColorRect" type="ColorRect" parent="body"]
offset_left = -12.0
offset_top = -86.0
offset_right = 9.0
offset_bottom = -1.0

[node name="ColorRect2" type="ColorRect" parent="body"]
offset_left = -41.0
offset_top = -158.0
offset_right = 37.0
offset_bottom = -84.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -79)
shape = SubResource("RectangleShape2D_n5mok")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a5t55")
}

[node name="textLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -199.998
offset_top = -224.998
offset_right = 201.002
offset_bottom = -200.998
theme_override_font_sizes/font_size = 24
text = "你好"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="Ischeck" from="." to="." method="_on_ischeck"]
[connection signal="Nocheck" from="." to="." method="_on_nocheck"]
